Added a Fortune Generator class, Quiz tabs, and Fortune Screen

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Mar 30 16:25:39 EDT 2018
-sdk.dir=/Users/AmirEraiba/Library/Android/sdk
+#Fri Mar 30 17:17:52 EDT 2018
+ndk.dir=C\:\\Users\\vkarwee\\AppData\\Local\\Android\\Sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\vkarwee\\AppData\\Local\\Android\\Sdk
