--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,12 @@
 
     <application
         android:allowBackup="true"
+        android:background="#CD3C3C"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:background="#CD3C3C">
+        android:theme="@style/AppTheme">
         <activity android:name=".Main_Screen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,6 +17,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="FortuneTab" />
+        <activity
+            android:name=".Fortunetab"
+            android:label="@string/title_activity_fortunetab"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".QuizTab"></activity>
     </application>
 
 </manifest>
