Created the logic for the quiz (intermediate) and created the interface, the data is connected to our firebase database where it fetches and displays the data on the quiz. Also created a result screen for the quiz

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pace.cs3892018team5.dev.chinesefortuneaide">
-<uses-permission android:name="android.permission.INTERNET">
 
-</uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
     <application
         android:allowBackup="true"
         android:background="#CD3C3C"
@@ -11,9 +11,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        >
-        <activity android:name=".Main_Screen"></activity>
+        android:theme="@style/AppTheme">
+        <activity android:name=".Main_Screen" />
         <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +23,8 @@
         <activity
             android:name=".Quiz2_Screen"
             android:label="@string/title_activity_quiz2__screen"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
+        <activity android:name=".ResultActivity"></activity>
     </application>
 
 </manifest>
