finish setting & notification

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pace.cs3892018team5.dev.chinesefortuneaide">
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -21,15 +21,17 @@
             </intent-filter>
         </activity>
         <activity
-        android:name=".Quiz2_Screen"
-        android:label="@string/title_activity_quiz2__screen"
-        android:theme="@style/AppTheme" />
+            android:name=".Quiz2_Screen"
+            android:label="@string/title_activity_quiz2__screen"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".Quiz1_Screen"
             android:label="@string/title_activity_quiz1__screen"
             android:theme="@style/AppTheme" />
-        <activity android:name=".ResultActivity"></activity>
-
+        <activity android:name=".ResultActivity" />
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"></activity>
     </application>
 
 </manifest>
