--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,9 +29,7 @@
             android:label="@string/title_activity_quiz1__screen"
             android:theme="@style/AppTheme" />
         <activity android:name=".ResultActivity" />
-        <activity
-            android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings"></activity>
+        <activity android:name=".ResultActivity2"></activity>
     </application>
 
 </manifest>
