--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Apr 17 18:21:40 EDT 2018
-sdk.dir=C\:\\Users\\varne\\AppData\\Local\\Android\\Sdk
+#Tue Apr 17 18:56:07 EDT 2018
+sdk.dir=/Users/johnnychen/Library/Android/sdk
