--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Apr 17 18:56:07 EDT 2018
-sdk.dir=/Users/johnnychen/Library/Android/sdk
+#Sun Apr 22 23:23:01 EDT 2018
+ndk.dir=C\:\\Users\\varne\\AppData\\Local\\Android\\Sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\varne\\AppData\\Local\\Android\\Sdk
