--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,42 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply plugin: 'com.android.application'
 
-buildscript {
-    
-    repositories {
-        google()
-        jcenter()
+android {
+    compileSdkVersion 26
+
+    defaultConfig {
+        applicationId "pace.cs3892018team5.dev.chinesefortuneaide"
+        minSdkVersion 21
+        targetSdkVersion 26
+        versionCode 1
+        versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
-        classpath 'com.google.gms:google-services:3.2.0'        
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
-}
-
-allprojects {
-    repositories {
-        maven {
-            url "https://maven.google.com"
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-        google()
-        jcenter()
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}//test
+dependencies {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:preference-v7:26.1.0'
+    implementation 'com.google.firebase:firebase-database:11.0.4'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.1.0'
+    implementation 'commons-io:commons-io:2.4'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.firebase:firebase-client-android:2.3.1'
+    implementation 'com.google.code.gson:gson:2.8.3'
+}
 
-//Changes made by Varney
+apply plugin: 'com.google.gms.google-services'
+
+
+
